--- a/pages/princesas.html
+++ b/pages/princesas.html
@@ -16,12 +16,12 @@
     <header>
         <nav class="navbar">
             <a href="/index.html"><img src="/imagenes/logo.png" class="logo" alt="imagen referencial"></a>
-            <ul class="navbar__menu">
+            <ul class="navbar__menu" id="menu">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="princesas.html">Princesas</a></li>
                 <li><a href="cualidades-de-una-princesa.html">Cualidades de una princesa</a></li>
             </ul>
-            <div class="menu-bar">
+            <div class="menu-bar" id="menu-bar">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
@@ -133,5 +133,6 @@
         </div>
         <h3 class="footer__h3">Todos los Derechos reservados By Ezequiel</h3>
     </footer> 
+    
 </body>
 </html>
